# nmsplib

./: .gitignore  CMakeLists.txt  README.md  cmake_utility.cmake
src/core/: CMakeLists.txt
src/core/base/: CMakeLists.txt
src/core/base/src/: nmsp_core_base-config.h  nmsp_core_base-pch.h  nmsp_core_base.h
src/core/base/src/nmsp_core_base/alloc/: nmspAlloc.h  nmspAllocStats_Base.h  nmspAlloc_Common.h  nmspAllocation.cpp  nmspAllocation.h
src/core/base/src/nmsp_core_base/common/: nmspAlloc_Common.cpp  nmspAlloc_Common.h  nmspBitUtil.h  nmspClass_Common.h  nmspDataType_Common.h  nmspEnum_Common.h  nmspError_Common.cpp  nmspError_Common.h  nmspFunction_Common.h  nmspInclude_Common.h  nmspNmspTraits.cpp  nmspNmspTraits.h  nmspTypeTrait_Common.h  nmspTypeTraits_Common.h  nmspUnitTest_Common.cpp  nmspUnitTest_Common.h  nmspUtil_Common.h  nmsp_core_base_common.h  nmsp_core_base_traits.cpp  nmsp_core_base_traits.h
src/core/base/src/nmsp_core_base/detect_platform/: nmsp_detect_compiler_gcc.h  nmsp_detect_compiler_vc.h  nmsp_detect_platform.h
src/core/base/src/nmsp_core_base/fmt/: nmspFmt.h
src/core/base/src/nmsp_core_base/marco/: nmsp_core_base_build_marco.h  nmsp_core_base_internal_marco.h  nmsp_core_base_marco.h  nmsp_core_base_memory_marco.h  nmsp_core_base_util_marco.h
src/core/base/src/nmsp_core_base/test/: nmspMemoryLeakReport.h  nmspUnitTest_Base.cpp  nmspUnitTest_Base.h
src/core/file_io/: CMakeLists.txt
src/core/file_io/src/: nmsp_file_io-config.h  nmsp_file_io-pch.h  nmsp_file_io.h
src/core/file_io/src/nmsp_file_io/color/: nmspColor.h  nmspColorUtil.h
src/core/file_io/src/nmsp_file_io/common/: nmsp_file_io_common.h  nmsp_file_io_traits.h
src/core/file_io/src/nmsp_file_io/image/: nmspImage.cpp  nmspImage.h  nmspImageIO_dds.cpp  nmspImageIO_dds.h  nmspImageIO_hdr.cpp  nmspImageIO_hdr.h  nmspImageIO_png.cpp  nmspImageIO_png.h
src/core/job_system/: CMakeLists.txt
src/core/job_system/src/: nmsp_job_system-config.h  nmsp_job_system-pch.h  nmsp_job_system.h
src/core/job_system/src/nmsp_job_system/: nmspJobSystem.cpp  nmspJobSystem.h
src/core/job_system/src/nmsp_job_system/allocator/: nmspFrameAllocator.h  nmspJobAllocator.h
src/core/job_system/src/nmsp_job_system/common/: nmsp_job_system_common.h  nmsp_job_system_traits.h
src/core/job_system/src/nmsp_job_system/job/: nmspJob.cpp  nmspJob.h  nmspJobCluster.h  nmspJobDispatch.h  nmspJobExtension.h  nmspJobFlow.cpp  nmspJobFlow.h
src/core/job_system/src/nmsp_job_system/thread/: nmspThreadPool.cpp  nmspThreadPool.h  nmspThreadStorage.h  nmspTypeThread.cpp  nmspTypeThread.h  nmspWorkerThread.cpp  nmspWorkerThread.h
src/core/log/: CMakeLists.txt
src/core/log/src/: nmsp_log-config.h  nmsp_log-pch.h  nmsp_log.h
src/core/log/src/nmsp_log/: nmspLog.h  nmspLogger.cpp  nmspLogger.h
src/core/log/src/nmsp_log/common/: nmsp_log_common.h  nmsp_log_traits.h
src/core/math/: CMakeLists.txt
src/core/math/src/: nmsp_math-config.h  nmsp_math-pch.h  nmsp_math.h
src/core/math/src/nmsp_math/: nmspMath.h  nmspRandom.h
src/core/math/src/nmsp_math/common/: nmspNmspMathTraits.h  nmsp_math_common.h  nmsp_math_traits.h
src/core/math/src/nmsp_math/geometry/: nmspMathAABBox3.cpp  nmspMathAABBox3.h  nmspMathCamera3.cpp  nmspMathCamera3.h  nmspMathCapsule3.h  nmspMathCylinder3.h  nmspMathFrustum3.cpp  nmspMathFrustum3.h  nmspMathGeometry.h  nmspMathGeometryUtil.h  nmspMathGeometry_Common.h  nmspMathLine2.h  nmspMathLine3.h  nmspMathPlane3.h  nmspMathRay3.cpp  nmspMathRay3.h  nmspMathRect2.h  nmspMathSphere3.h  nmspMathTriangle3.h
src/core/math/src/nmsp_math/primitive/: nmspMat3.h  nmspMat4.h  nmspMathPrimitive.h  nmspMathPrimitve_Common.h  nmspQuat4.h  nmspTuple2.h  nmspTuple3.h  nmspTuple4.h  nmspVec2.h  nmspVec3.h  nmspVec4.h
src/core/os/: CMakeLists.txt
src/core/os/src/: nmsp_os-config.h  nmsp_os-pch.h  nmsp_os.h
src/core/os/src/nmsp_os/app/: ConsoleApp.h  ProjectSetting.cpp  ProjectSetting.h  nmspAppBase.h  nmspConsoleApp.h  nmspProjectSetting.cpp  nmspProjectSetting.h
src/core/os/src/nmsp_os/atomic/: nmspAtomic.h  nmspAtomicPrimitive.h  nmspAtomic_Common.h  nmspCondVar.h  nmspMutex.h  nmspNativeThread.cpp  nmspNativeThread.h  nmspThreadLocalStorage.h
src/core/os/src/nmsp_os/common/: nmspOsTraits_Base.h  nmspOsUtil.h  nmspWindowRect2.h  nmsp_os_common.h  nmsp_os_traits.h
src/core/os/src/nmsp_os/file/: nmspDirectory.cpp  nmspDirectory.h  nmspFile.cpp  nmspFile.h  nmspFileSteam.cpp  nmspFileSteam.h  nmspFileStream.cpp  nmspFileStream.h  nmspFileStream_Base.h  nmspFileUsage.h  nmspMemMapFile.h  nmspMemMapFile_Base.h  nmspPath.cpp  nmspPath.h
src/core/os/src/nmsp_os/input/: nmspUIEvent.h  nmspUIInput.h  nmspUIKeyCode.h  nmspUIKeyboardEvent.h  nmspUIMouseEvent.h  nmspUiInput.cpp
src/core/profiler/: CMakeLists.txt
src/core/profiler/src/: nmsp_profiler-config.h  nmsp_profiler-pch.h  nmsp_profiler.h
src/core/profiler/src/nmsp_profiler/: nmsp_profiler_marco.h
src/core/src/: nmsp_core-config.h  nmsp_core-pch.h  nmsp_core.h
src/core/src/nmsp_core/base/: nmsp_core_base.h
src/core/src/nmsp_core/common/: nmsp_core_common.h  nmsp_core_traits.h
src/core/src/nmsp_core/log/: nmspLog.h
src/core/stl/: CMakeLists.txt  nmsp_stl.natvis
src/core/stl/src/: EASTL.natvis  nmsp_stl-config.h  nmsp_stl-pch.h  nmsp_stl.h  nmsp_stl.natvis
src/core/test/: CMakeLists.txt
src/core/test/src/: nmsp_core_test-pch.h
src/core/test/src/nmsp_core_test/: nmsp_core_test.cpp
(+287 files in other folders)
